--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,69 +66,70 @@ permissions:
   actions: read # This is required for 8398a7/action-slack
 
 jobs:
-  # test:
-  #   name: Test
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 30
-  #   steps:
-  #     - name: Publish progress message to slack
-  #       uses: monta-app/slack-notifier-cli-action@main
-  #       id: publish-slack
-  #       with:
-  #         github-context: ${{ toJson(github) }}
-  #         job-type: "test"
-  #         job-status: "progress"
-  #         service-name: ${{ inputs.service-name }}
-  #         service-emoji: ${{ inputs.service-emoji }}
-  #         slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-  #         slack-channel-id: "C01KL9FUPNK"
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Set up JDK
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         distribution: 'corretto'
-  #         java-version: '17'
-  #         cache: 'gradle'
-  #     - name: Test project
-  #       env:
-  #         GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
-  #         GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
-  #         GRADLE_MODULE: ${{ inputs.gradle-module }}
-  #       run: |
-  #         if [ -z "$GRADLE_MODULE" ]
-  #         then
-  #           ./gradlew --no-daemon test
-  #         else
-  #           ./gradlew --no-daemon $GRADLE_MODULE:test
-  #         fi
-  #       shell: bash
-  #     - name: Upload test results
-  #       if: ${{ always() }}
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: test-result
-  #         path: |
-  #           build/reports/tests/test
-  #           /home/runner/.gradle/daemon/**/daemon-*.out.log
-  #         retention-days: 2
-  #     - name: Publish result message to slack
-  #       uses: monta-app/slack-notifier-cli-action@main
-  #       if: ${{ always() }}
-  #       with:
-  #         github-context: ${{ toJson(github) }}
-  #         job-type: "test"
-  #         job-status: ${{ job.status }}
-  #         service-name: ${{ inputs.service-name }}
-  #         service-emoji: ${{ inputs.service-emoji }}
-  #         slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-  #         slack-channel-id: "C01KL9FUPNK"
-  #         slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
-  #   outputs:
-  #     slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Publish progress message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        id: publish-slack
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "test"
+          job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+          cache: 'gradle'
+      - name: Test project
+        env:
+          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
+          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
+          GRADLE_MODULE: ${{ inputs.gradle-module }}
+        run: |
+          if [ -z "$GRADLE_MODULE" ]
+          then
+            ./gradlew --no-daemon test
+          else
+            ./gradlew --no-daemon $GRADLE_MODULE:test
+          fi
+        shell: bash
+      - name: Upload test results
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-result
+          path: |
+            build/reports/tests/test
+            /home/runner/.gradle/daemon/**/daemon-*.out.log
+          retention-days: 2
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: ${{ always() }}
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "test"
+          job-status: ${{ job.status }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+
   build:
     name: Build
-    # needs: test
+    needs: test
     runs-on: ${{ matrix.runner-type }}
     timeout-minutes: 30
     strategy:
@@ -137,18 +138,18 @@ jobs:
         - ubuntu-latest
         - [self-hosted, linux, ARM64]
     steps:
-      # - name: Publish progress message to slack
-      #   uses: monta-app/slack-notifier-cli-action@main
-      #   id: publish-slack
-      #   with:
-      #     github-context: ${{ toJson(github) }}
-      #     job-type: "build"
-      #     job-status: "progress"
-      #     service-name: ${{ inputs.service-name }}
-      #     service-emoji: ${{ inputs.service-emoji }}
-      #     slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-      #     slack-channel-id: "C01KL9FUPNK"
-      #     slack-message-id: ${{ needs.test.outputs.slack-message-id }}
+      - name: Publish progress message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        id: publish-slack
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "build"
+          job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ needs.test.outputs.slack-message-id }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up JDK
@@ -189,9 +190,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.service-identifier }}-${{ inputs.stage }}
-          # type=sha,format=long,prefix=,suffix=-${{ runner.arch }}
           tags: |
-            type=raw,value=test,prefix=,suffix=-${{ runner.arch }}
+            type=sha,format=long,prefix=,suffix=-${{ runner.arch }}
           flavor: |
             latest=false
             prefix=
@@ -209,7 +209,21 @@ jobs:
             GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
-  
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: ${{ always() }}
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "build"
+          job-status: ${{ job.status }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+
   push-manifest-list:
     name: Push Manifest
     needs: build
@@ -246,7 +260,6 @@ jobs:
         id: build-container
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
           SERVICE_NAME: ${{ inputs.service-identifier }}
           STAGE: ${{ inputs.stage }}
           DOCKER_FILE_NAME: ${{ inputs.docker-file-name }}
@@ -254,96 +267,65 @@ jobs:
         shell: bash
         run: |
           ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE
-          docker manifest create $ECR_IMAGE_URL:test $ECR_IMAGE_URL:test-ARM64 $ECR_IMAGE_URL:test-X64
-          docker manifest annotate --arch arm64 $ECR_IMAGE_URL:test $ECR_IMAGE_URL:test-ARM64
-          docker manifest annotate --arch amd64 $ECR_IMAGE_URL:test $ECR_IMAGE_URL:test-X64
-          docker manifest inspect $ECR_IMAGE_URL:test
-          docker manifest push $ECR_IMAGE_URL:test
+          docker manifest create $ECR_IMAGE_URL:${{ github.sha }} $ECR_IMAGE_URL:${{ github.sha }}-ARM64 $ECR_IMAGE_URL:${{ github.sha }}-X64
+          docker manifest annotate --arch arm64 $ECR_IMAGE_URL:${{ github.sha }} $ECR_IMAGE_URL:${{ github.sha }}-ARM64
+          docker manifest annotate --arch amd64 $ECR_IMAGE_URL:${{ github.sha }} $ECR_IMAGE_URL:${{ github.sha }}-X64
+          docker manifest inspect $ECR_IMAGE_URL:${{ github.sha }}
+          docker manifest push $ECR_IMAGE_URL:${{ github.sha }}
 
-      # - name: Build docker container
-      #   id: build-container
-      #   env:
-      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     IMAGE_TAG: ${{ github.sha }}
-      #     SERVICE_NAME: ${{ inputs.service-identifier }}
-      #     STAGE: ${{ inputs.stage }}
-      #     DOCKER_FILE_NAME: ${{ inputs.docker-file-name }}
-      #     JAVA_VERSION: ${{ inputs.java-version }}
-      #   run: |
-      #     ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE
-      #     docker build --build-arg=JAVA_VERSION=$JAVA_VERSION --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -f $DOCKER_FILE_NAME -t $ECR_IMAGE_URL:$IMAGE_TAG .
-      #     docker push $ECR_IMAGE_URL:$IMAGE_TAG
-      #     docker tag $ECR_IMAGE_URL:$IMAGE_TAG $ECR_IMAGE_URL:latest
-      #     docker push $ECR_IMAGE_URL:latest
-      #     echo "::set-output name=ECR_IMAGE_URL:$IMAGE_TAG::$ECR_IMAGE_URL:$IMAGE_TAG"
-      #   shell: bash
-      # - name: Publish result message to slack
-      #   uses: monta-app/slack-notifier-cli-action@main
-      #   if: ${{ always() }}
-      #   with:
-      #     github-context: ${{ toJson(github) }}
-      #     job-type: "build"
-      #     job-status: ${{ job.status }}
-      #     service-name: ${{ inputs.service-name }}
-      #     service-emoji: ${{ inputs.service-emoji }}
-      #     slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-      #     slack-channel-id: "C01KL9FUPNK"
-      #     slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
-    # outputs:
-    #   slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
-  # deploy:
-  #   name: Deploy
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 5
-  #   steps:
-  #     - name: Publish progress message to slack
-  #       uses: monta-app/slack-notifier-cli-action@main
-  #       id: publish-slack
-  #       with:
-  #         github-context: ${{ toJson(github) }}
-  #         job-type: "deploy"
-  #         job-status: "progress"
-  #         service-name: ${{ inputs.service-name }}
-  #         service-emoji: ${{ inputs.service-emoji }}
-  #         slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-  #         slack-channel-id: "C01KL9FUPNK"
-  #         slack-message-id: ${{ needs.build.outputs.slack-message-id }}
-  #     - name: Check out manifest repository
-  #       uses: actions/checkout@master
-  #       with:
-  #         repository: monta-app/kube-manifests
-  #         path: 'manifests'
-  #         token: ${{ secrets.MANIFEST_REPO_PAT }}
-  #     - name: Update image name
-  #       shell: bash
-  #       working-directory: ./manifests/apps/${{ inputs.service-identifier }}/${{ inputs.stage }}/app
-  #       run: |
-  #         sed -i "s/tag: .*/tag: ${{ github.sha }}/" values.yaml
-  #         sed -i "s/revision: .*/revision: ${GITHUB_SHA::8}/" values.yaml
-  #         sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
-  #     - name: Commit to manifest repository
-  #       working-directory: './manifests'
-  #       run: |
-  #         git config --local user.email "action@github.com"
-  #         git config --local user.name "GitHub Action"
-  #         git commit -am "Bump docker tag for ${{ inputs.service-identifier }} on ${{ inputs.stage }}"
-  #       shell: bash
-  #     - name: Push
-  #       uses: ad-m/github-push-action@master
-  #       with:
-  #         github_token: ${{ secrets.MANIFEST_REPO_PAT }}
-  #         directory: './manifests'
-  #         repository: monta-app/kube-manifests
-  #     - name: Publish result message to slack
-  #       uses: monta-app/slack-notifier-cli-action@main
-  #       if: ${{ always() }}
-  #       with:
-  #         github-context: ${{ toJson(github) }}
-  #         job-type: "deploy"
-  #         job-status: ${{ job.status }}
-  #         service-name: ${{ inputs.service-name }}
-  #         service-emoji: ${{ inputs.service-emoji }}
-  #         slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-  #         slack-channel-id: "C01KL9FUPNK"
-  #         slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Publish progress message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        id: publish-slack
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "deploy"
+          job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ needs.build.outputs.slack-message-id }}
+      - name: Check out manifest repository
+        uses: actions/checkout@master
+        with:
+          repository: monta-app/kube-manifests
+          path: 'manifests'
+          token: ${{ secrets.MANIFEST_REPO_PAT }}
+      - name: Update image name
+        shell: bash
+        working-directory: ./manifests/apps/${{ inputs.service-identifier }}/${{ inputs.stage }}/app
+        run: |
+          sed -i "s/tag: .*/tag: ${{ github.sha }}/" values.yaml
+          sed -i "s/revision: .*/revision: ${GITHUB_SHA::8}/" values.yaml
+          sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
+      - name: Commit to manifest repository
+        working-directory: './manifests'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -am "Bump docker tag for ${{ inputs.service-identifier }} on ${{ inputs.stage }}"
+        shell: bash
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.MANIFEST_REPO_PAT }}
+          directory: './manifests'
+          repository: monta-app/kube-manifests
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: ${{ always() }}
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "deploy"
+          job-status: ${{ job.status }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
