add run id label

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -208,7 +208,9 @@ jobs:
             JAVA_VERSION=${{ inputs.java-version }}
             GHL_USERNAME=${{ secrets.GHL_USERNAME }}
             GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}
-          labels: ${{ steps.meta.outputs.labels }}
+          labels: |
+            GITHUB_RUN_ID=${{ env.GITHUB_RUN_ID }}
+            ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
     #   - name: Publish result message to slack
     #     uses: monta-app/slack-notifier-cli-action@main
