--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -283,7 +283,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: build
+    needs: push-manifest-list
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
