--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -81,7 +81,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up JDK
@@ -122,7 +122,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
@@ -149,7 +149,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
           slack-message-id: ${{ needs.test.outputs.slack-message-id }}
       - name: Checkout
         uses: actions/checkout@v3
@@ -224,7 +224,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
@@ -297,7 +297,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
           slack-message-id: ${{ needs.build.outputs.slack-message-id }}
       - name: Check out manifest repository
         uses: actions/checkout@master
@@ -335,5 +335,5 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
+          slack-channel-id: "C05JU9YD2D8"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
