--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -128,7 +128,7 @@ jobs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   build:
-    name: Build
+    name: Build-${{ runner.arch }}
     needs: test
     runs-on: ${{ matrix.runner-type }} # Runs on both self-hosted arm64 as well as hosted amd64
     timeout-minutes: 30
@@ -226,8 +226,15 @@ jobs:
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+      - name: Set slack message id output
+        if: ${{ runner.arch == 'X64' }}
+        id: set_output
+        env:
+          message_id: ${{ steps.publish-slack.outputs.slack-message-id }}
+        run: echo "slack-message-id=$message_id" >> "$GITHUB_OUTPUT"
+        shell: bash
     outputs:
-      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+      slack-message-id: ${{ steps.set_output.outputs.slack-message-id }}
 
   push-manifest-list:
     name: Push Manifest
