--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -128,7 +128,7 @@ jobs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   build:
-    name: Build-${{ runner.arch }}
+    name: Build
     needs: test
     runs-on: ${{ matrix.runner-type }} # Runs on both self-hosted arm64 as well as hosted amd64
     timeout-minutes: 30
