--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -231,10 +231,10 @@ jobs:
         id: set_output
         env:
           message_id: ${{ steps.publish-slack.outputs.slack-message-id }}
-        run: echo "slack-message-id=$message_id" >> "$GITHUB_OUTPUT"
+        run: echo "id=${message_id}" >> "$GITHUB_OUTPUT"
         shell: bash
     outputs:
-      slack-message-id: ${{ steps.set_output.outputs.slack-message-id }}
+      slack-message-id: ${{ steps.set_output.outputs.id }}
 
   push-manifest-list:
     name: Push Manifest
