--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -294,6 +294,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - name: test outputs
+        shell: bash
+        env:
+          output1: ${{ needs.build.outputs.slack-message-id }}
+          outputs: ${{ join(needs.build.outputs.*, '\n') }}
+        run: echo ${output1}; echo ""; echo ${outputs}
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
