--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -227,7 +227,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
-        if: ${{ runner.arch == 'X64' }}
+        if: ${{ runner.arch == 'X64' && ( failure() || success() || cancelled() ) }}
         with:
           github-context: ${{ toJson(github) }}
           job-type: "build"
