add break mechanism if sha already exists in registry

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,9 +66,50 @@ permissions:
   actions: read # This is required for 8398a7/action-slack
 
 jobs:
+
+  test_tag_in_registry:
+    name: Testing if SHA already exists in registry
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Check for secret.AWS_ACCOUNT_ID availability
+        id: secret-check
+        shell: bash
+        run: |
+          if [ "${{ secrets.AWS_ACCOUNT_ID }}" != '' ]; then
+            echo "available=true" >> $GITHUB_OUTPUT;
+          else
+            echo "available=false" >> $GITHUB_OUTPUT;
+          fi
+      - name: Configure AWS credentials via assumed role
+        uses: aws-actions/configure-aws-credentials@v1
+        if: steps.secret-check.outputs.available == 'true'
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ecr-get-image
+          role-session-name: get-image-from-${{ inputs.service-identifier }}-${{ inputs.stage }}
+          aws-region: ${{ inputs.region }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        if: steps.secret-check.outputs.available == 'false'
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ inputs.region }}
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Get images
+        shell: bash
+        env:
+          SERVICE_NAME: ${{ inputs.service-identifier }}
+          STAGE: ${{ inputs.stage }}
+        run: |
+          aws ecr list-images --repository-name $SERVICE_NAME-$STAGE | grep ${{ github.sha }}
+
   init_message:
     name: Sending first Slack message
     runs-on: ubuntu-latest
+    needs: test_tag_in_registry
     timeout-minutes: 5
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
